Fix meta/signal displayname template quoting

--- a/bridgeconfig/signal.tpl.yaml
+++ b/bridgeconfig/signal.tpl.yaml
@@ -92,7 +92,7 @@ bridge:
     # Localpart template of MXIDs for Signal users.
     username_template: {{ .BridgeName }}_{{ "{{.}}" }}
     # Displayname template for Signal users. This is also used as the room name in DMs if private_chat_portal_meta is enabled.
-    displayname_template:  {{ `"{{or .ContactName .ProfileName .PhoneNumber "Unknown user" }}"` }}
+    displayname_template: {{ `'{{or .ContactName .ProfileName .PhoneNumber "Unknown user" }}'` }}
     # Whether to explicitly set the avatar and room name for private chat portal rooms.
     # If set to `default`, this will be enabled in encrypted rooms and disabled in unencrypted rooms.
     # If set to `always`, all DM rooms will have explicit names and avatars set.
