--- a/bridgeconfig/instagram.tpl.yaml
+++ b/bridgeconfig/instagram.tpl.yaml
@@ -297,7 +297,7 @@ bridge:
     # If set to `default`, this will be enabled in encrypted rooms and disabled in unencrypted rooms.
     # If set to `always`, all DM rooms will have explicit names and avatars set.
     # If set to `never`, DM rooms will never have names and avatars set.
-    private_chat_portal_meta: never
+    private_chat_portal_meta: default
     # Whether or not the bridge should send a read receipt from the bridge bot when a message has
     # been sent to Instagram.
     delivery_receipts: false
