--- a/bridgeconfig/meta.tpl.yaml
+++ b/bridgeconfig/meta.tpl.yaml
@@ -98,7 +98,7 @@ bridge:
     # If set to `default`, this will be enabled in encrypted rooms and disabled in unencrypted rooms.
     # If set to `always`, all DM rooms will have explicit names and avatars set.
     # If set to `never`, DM rooms will never have names and avatars set.
-    private_chat_portal_meta: never
+    private_chat_portal_meta: default
 
     portal_message_buffer: 128
 
