--- a/bridgeconfig/signal.tpl.yaml
+++ b/bridgeconfig/signal.tpl.yaml
@@ -97,7 +97,7 @@ bridge:
     # If set to `default`, this will be enabled in encrypted rooms and disabled in unencrypted rooms.
     # If set to `always`, all DM rooms will have explicit names and avatars set.
     # If set to `never`, DM rooms will never have names and avatars set.
-    private_chat_portal_meta: never
+    private_chat_portal_meta: default
     # Should avatars from the user's contact list be used? This is not safe on multi-user instances.
     use_contact_avatars: true
     # Should the Signal user's phone number be included in the room topic in private chat portal rooms?
