--- a/bridgeconfig/imessage.tpl.yaml
+++ b/bridgeconfig/imessage.tpl.yaml
@@ -153,7 +153,7 @@ bridge:
         # Maximum number of messages to backfill for new portal rooms.
         initial_limit: 100
         # Maximum age of chats to sync in days.
-        initial_sync_max_age: 0.5
+        initial_sync_max_age: 7
         # If a backfilled chat is older than this number of hours, mark it as read even if it's unread on iMessage.
         # Set to -1 to let any chat be unread.
         unread_hours_threshold: 720
@@ -218,7 +218,7 @@ bridge:
     caption_in_message: true
     # Should the bridge explicitly set the avatar and room name for private chat portal rooms?
     # This is implicitly enabled in encrypted rooms.
-    private_chat_portal_meta: never
+    private_chat_portal_meta: default
 
     # End-to-bridge encryption support options.
     # See https://docs.mau.fi/bridges/general/end-to-bridge-encryption.html
