try to fix tag the commit sha

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -92,7 +92,8 @@ jobs:
           images: ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=latest,enable=${{  github.ref == 'refs/heads/main' }}
-            type=semver,pattern={{version}}
+            type=sha,format=long
+            type=ref
 
       - name: Docker Build
         uses: docker/build-push-action@v5
