--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -92,7 +92,7 @@ jobs:
           images: ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=latest,enable=${{  github.ref == 'refs/heads/main' }}
-            type=sha,format=long
+            type=sha,format=long,prefix=
 
       - name: Docker Build
         uses: docker/build-push-action@v5
